fixed up page structure

--- a/Dad-Website/index.html
+++ b/Dad-Website/index.html
@@ -8,7 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@1,800&family=Bitter:ital,wght@0,500;1,500&family=Red+Hat+Mono:ital@0;1&display=swap" rel="stylesheet">
       </head>
       <body>
-          <nav class='speed-test'><a href='http://speedtest.googlefiber.net/'>Google Fiber Speed Test</a></nav><!--Speed Test-->
+          <nav class="speed-test"><a href="http://speedtest.googlefiber.net/">Google Fiber Speed Test</a></nav><!--Speed Test-->
           <header><h1>Protection Plans</h1></header>
           <div class='plan1'><!--Standard Plan-->
             <header>
