added bullet points and stock photos

--- a/Dad-Website/index.html
+++ b/Dad-Website/index.html
@@ -11,22 +11,46 @@
           <nav class="speed-test"><a href="http://speedtest.googlefiber.net/">Google Fiber Speed Test</a></nav><!--Speed Test-->
           <header><h1>Protection Plans</h1></header>
           <div class='plan1'><!--Standard Plan-->
-            <header>
+            <section>
                 <h2>Standard Protection Plan</h2>
-                <p>What dad wants</p>
-            </header>
+                <p class="left">This plan includes:</p>
+                  <ul class="inclusion">
+                  <li>home network setup</li>
+                  <li>computer and phone Repair</li>
+                  <li>Network Trouble shooting</li>
+                </ul>
+                <p class="descrip">Standard protection plan that provides coverage for your everyday devices</p>
+            </section>
           </div>
           <div class='plan2'><!--Smart Home Plan-->
-            <header>
+            <section>
                 <h2>Smart Home Protection Plan</h2>
-                <p>What dad wants Smart</p>
-            </header>
+                <p class="left">This Plan includes:</p>
+                <ul>
+                  <ul class="inclusion">
+                    <li>home network setup</li>
+                    <li>computer and phone Repair</li>
+                    <li>Network Trouble shooting</li>
+                    <li>Smart Home Device setup</li>
+                    <li>Smart Home Device Troubleshooting</li>
+                </ul>
+                <p class="descrip">Standard Plan plus setup and protection for Smart home devices</p>
+              </section>
           </div>
           <div class='plan3'><!--Gamer Plan-->
-            <header>
+            <section>
                 <h2>Gamer Protection Plan</h2>
-                <p>What dad wants Gamer</p>
-            </header>
+                <p>This Plan includes:</p>
+                <ul>
+                  <ul class="inclusion">
+                    <li>home network setup</li>
+                    <li>computer and phone Repair</li>
+                    <li>Network Trouble shooting</li>
+                    <li>Game Console Troubleshooting</li>
+                    <li>Possible Game Console Repair</li>
+                </ul>
+                <p class="descrip">Standard Game plan with troubleshooting and repairs for Game consoles</p>
+              </>
           </div>
       </body>
 </html>
