purchase buttons and fixed indentation

--- a/Dad-Website/index.html
+++ b/Dad-Website/index.html
@@ -20,13 +20,13 @@
                   <li>Network Trouble shooting</li>
                 </ul>
                 <p class="descrip">Standard protection plan that provides coverage for your everyday devices</p>
-            </section>
+                <button>Purchase</button>
+              </section>
           </div>
           <div class='plan2'><!--Smart Home Plan-->
             <section>
                 <h2>Smart Home Protection Plan</h2>
                 <p class="left">This Plan includes:</p>
-                <ul>
                   <ul class="inclusion">
                     <li>home network setup</li>
                     <li>computer and phone Repair</li>
@@ -35,14 +35,14 @@
                     <li>Smart Home Device Troubleshooting</li>
                 </ul>
                 <p class="descrip">Standard Plan plus setup and protection for Smart home devices</p>
+                <button>Purchase</button>
               </section>
           </div>
           <div class='plan3'><!--Gamer Plan-->
             <section>
                 <h2>Gamer Protection Plan</h2>
                 <p>This Plan includes:</p>
-                <ul>
-                  <ul class="inclusion">
+                <ul class="inclusion">
                     <li>home network setup</li>
                     <li>computer and phone Repair</li>
                     <li>Network Trouble shooting</li>
@@ -50,7 +50,8 @@
                     <li>Possible Game Console Repair</li>
                 </ul>
                 <p class="descrip">Standard Game plan with troubleshooting and repairs for Game consoles</p>
-              </>
+                <button>Purchase</button>
+              </section>
           </div>
       </body>
 </html>
